# 04-cnc-toolpath-simulator

./: README.md  index.html  package-lock.json  package.json  vite.config.js
electron/: main.js  preload.js
examples/: demo_5axis.nc
rust-core/: Cargo.toml  build.rs  package.json
rust-core/src/: gcode_parser.rs  kinematics.rs  lib.rs  shared_memory.rs  types.rs  voxel_engine.rs
src/components/: LeftSidebar.vue  PlaybackControls.vue  RightSidebar.vue  TopToolbar.vue  Viewport3D.vue
src/core/: CNCScene.js  STLLoader.js  VoxelEngine.js
src/router/: index.js
src/stores/: simulator.js
src/styles/: global.css
src/views/: SimulatorView.vue
